// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`annotations.ts > add 1`] = `
"module Add.

add a: Int, b: Int => Int.

---

add a b = a + b.

check

all a: Int, b: Int | add a b = a + b.
"
`;

exports[`annotations.ts > noAnnot 1`] = `
"module NoAnnot.

noAnnot x: Int => Int.

---

noAnnot x = x.
"
`;

exports[`annotations.ts > rangeCheck 1`] = `
"module RangeCheck.

rangeCheck x: Int => Bool.

---

rangeCheck x = x >= 0.

check

all x: Int |
  rangeCheck x >= 0.
"
`;

exports[`annotations.ts > sum 1`] = `
"module Sum.

sum a: Int, b: Int => Int.

---

sum a b = a + b.

check

all a: Int, b: Int | sum a b >= a.
all a: Int, b: Int | sum a b >= b.
"
`;

exports[`control-flow.ts > abs 1`] = `
"module Abs.

abs n: Int => Int.

---

abs n = cond n >= 0 => n, true => 0 - n.
"
`;

exports[`control-flow.ts > effectiveBalance 1`] = `
"module EffectiveBalance.

Account.
active a: Account => Bool.
balance a: Account => Int.
effectiveBalance a: Account => Int.

---

effectiveBalance a = cond active a => balance a, true => 0.
"
`;

exports[`control-flow.ts > max 1`] = `
"module Max.

max a: Int, b: Int => Int.

---

max a b = cond a >= b => a, true => b.
"
`;

exports[`expressions-arithmetic.ts > add 1`] = `
"module Add.

add a: Int, b: Int => Int.

---

add a b = a + b.
"
`;

exports[`expressions-arithmetic.ts > diff 1`] = `
"module Diff.

diff a: Int, b: Int => Int.

---

diff a b = a - b.
"
`;

exports[`expressions-arithmetic.ts > double 1`] = `
"module Double.

double n: Int => Int.

---

double n = n * 2.
"
`;

exports[`expressions-arithmetic.ts > getVersion 1`] = `
"module GetVersion.

getVersion  => Int.

---

getVersion = 42.
"
`;

exports[`expressions-arithmetic.ts > half 1`] = `
"module Half.

half n: Int => Int.

---

half n = n / 2.
"
`;

exports[`expressions-arithmetic.ts > netBalance 1`] = `
"module NetBalance.

Account.
balance a: Account => Int.
netBalance a: Account, fee: Int => Int.

---

netBalance a fee = balance a - fee.
"
`;

exports[`expressions-arithmetic.ts > power 1`] = `
"module Power.

power a: Int, b: Int => Int.

---

> UNSUPPORTED: operator AsteriskAsteriskToken.
"
`;

exports[`expressions-arithmetic.ts > remainder 1`] = `
"module Remainder.

remainder a: Int, b: Int => Int.

---

> UNSUPPORTED: operator PercentToken.
"
`;

exports[`expressions-array.ts > activeNames 1`] = `
"module ActiveNames.

User.
name u: User => String.
active u: User => Bool.
score u: User => Int.
activeNames users: [User] => [String].

---

activeNames users = (each x: User, active x | name x).
"
`;

exports[`expressions-array.ts > contains 1`] = `
"module Contains.

contains items: [String], x: String => Bool.

---

contains items x = x in items.
"
`;

exports[`expressions-array.ts > count 1`] = `
"module Count.

count items: [String] => Int.

---

count items = #items.
"
`;

exports[`expressions-array.ts > highScores 1`] = `
"module HighScores.

User.
name u: User => String.
active u: User => Bool.
score u: User => Int.
highScores users: [User] => [Int].

---

highScores users = (each x: User, score x > 0 | score x).
"
`;

exports[`expressions-array.ts > nameLengths 1`] = `
"module NameLengths.

User.
name u: User => String.
active u: User => Bool.
score u: User => Int.
nameLengths users: [User] => [Int].

---

nameLengths users = (each x: User | length name x).
"
`;

exports[`expressions-boolean.ts > and 1`] = `
"module And.

and a: Bool, b: Bool => Bool.

---

and a b = a and b.
"
`;

exports[`expressions-boolean.ts > andNot 1`] = `
"module AndNot.

andNot a: Bool, b: Bool => Bool.

---

andNot a b = a and ~(b).
"
`;

exports[`expressions-boolean.ts > not 1`] = `
"module Not.

not a: Bool => Bool.

---

not a = ~(a).
"
`;

exports[`expressions-boolean.ts > or 1`] = `
"module Or.

or a: Bool, b: Bool => Bool.

---

or a b = a or b.
"
`;

exports[`expressions-comparison.ts > eq 1`] = `
"module Eq.

eq a: Int, b: Int => Bool.

---

eq a b = a = b.
"
`;

exports[`expressions-comparison.ts > gt 1`] = `
"module Gt.

gt a: Int, b: Int => Bool.

---

gt a b = a > b.
"
`;

exports[`expressions-comparison.ts > gte 1`] = `
"module Gte.

gte a: Int, b: Int => Bool.

---

gte a b = a >= b.
"
`;

exports[`expressions-comparison.ts > lt 1`] = `
"module Lt.

lt a: Int, b: Int => Bool.

---

lt a b = a < b.
"
`;

exports[`expressions-comparison.ts > lte 1`] = `
"module Lte.

lte a: Int, b: Int => Bool.

---

lte a b = a <= b.
"
`;

exports[`expressions-comparison.ts > neq 1`] = `
"module Neq.

neq a: Int, b: Int => Bool.

---

neq a b = a ~= b.
"
`;

exports[`expressions-literals.ts > fortyTwo 1`] = `
"module FortyTwo.

fortyTwo  => Int.

---

fortyTwo = 42.
"
`;

exports[`expressions-literals.ts > no 1`] = `
"module No.

no  => Bool.

---

no = false.
"
`;

exports[`expressions-literals.ts > yes 1`] = `
"module Yes.

yes  => Bool.

---

yes = true.
"
`;

exports[`expressions-misc.ts > asNumber 1`] = `
"module AsNumber.

asNumber x: unknown => Int.

---

asNumber x = x.
"
`;

exports[`expressions-misc.ts > negate 1`] = `
"module Negate.

negate n: Int => Int.

---

negate n = -(n).
"
`;

exports[`expressions-misc.ts > nonNull 1`] = `
"module NonNull.

nonNull x: Int + Nothing => Int.

---

nonNull x = x.
"
`;

exports[`expressions-misc.ts > parenAdd 1`] = `
"module ParenAdd.

parenAdd a: Int, b: Int => Int.

---

parenAdd a b = a + b.
"
`;

exports[`expressions-property.ts > effectiveBalance 1`] = `
"module EffectiveBalance.

User.
name u: User => String.
Account.
balance a: Account => Int.
owner a: Account => User.
active a: Account => Bool.
effectiveBalance a: Account => Int.

---

effectiveBalance a = cond active a => balance a, true => 0.
"
`;

exports[`expressions-property.ts > getOwner 1`] = `
"module GetOwner.

User.
name u: User => String.
Account.
balance a: Account => Int.
owner a: Account => User.
active a: Account => Bool.
getOwner a: Account => User.

---

getOwner a = owner a.
"
`;

exports[`expressions-property.ts > getOwnerName 1`] = `
"module GetOwnerName.

User.
name u: User => String.
Account.
balance a: Account => Int.
owner a: Account => User.
active a: Account => Bool.
getOwnerName a: Account => String.

---

getOwnerName a = name owner a.
"
`;

exports[`functions-class.ts > Account.deposit 1`] = `
"module Deposit.

~> Deposit @ a: Account, amount: Int.

---

balance' a = balance a + amount.
"
`;

exports[`functions-class.ts > Account.getBalance 1`] = `
"module GetBalance.

getBalance a: Account => Int.

---

getBalance a = balance a.
"
`;

exports[`functions-mutating.ts > deposit 1`] = `
"module Deposit.

Account.
balance a: Account => Int.
owner a: Account => String.
~> Deposit @ a: Account, amount: Int.

---

balance' a = balance a + amount.
owner' a = owner a.
"
`;

exports[`functions-mutating.ts > depositWrapped 1`] = `
"module DepositWrapped.

Account.
balance a: Account => Int.
owner a: Account => String.
~> DepositWrapped @ a: Account, amount: Int.

---

balance' a = balance a + amount.
owner' a = owner a.
"
`;

exports[`functions-mutating.ts > reset 1`] = `
"module Reset.

Account.
balance a: Account => Int.
owner a: Account => String.
~> Reset @ a: Account.

---

balance' a = 0.
owner' a = owner a.
"
`;

exports[`functions-mutating.ts > transfer 1`] = `
"module Transfer.

Account.
balance a: Account => Int.
owner a: Account => String.
~> Transfer @ a: Account, newOwner: String, fee: Int.

---

balance' a = balance a - fee.
owner' a = newOwner.
"
`;

exports[`functions-pure.ts > add 1`] = `
"module Add.

add a: Int, b: Int => Int.

---

add a b = a + b.
"
`;

exports[`functions-pure.ts > getBalance 1`] = `
"module GetBalance.

Account.
balance a: Account => Int.
getBalance a: Account => Int.

---

getBalance a = balance a.
"
`;

exports[`functions-pure.ts > getNames 1`] = `
"module GetNames.

getNames names: [String] => [String].

---

getNames names = names.
"
`;

exports[`functions-pure.ts > getVersion 1`] = `
"module GetVersion.

getVersion  => Int.

---

getVersion = 42.
"
`;

exports[`functions-pure.ts > isPositive 1`] = `
"module IsPositive.

isPositive n: Int => Bool.

---

isPositive n = n > 0.
"
`;

exports[`guards-assert.ts > deposit 1`] = `
"module Deposit.

Account.
balance a: Account => Int.
~> Deposit @ account: Account, amount: Int, amount > 0.

---

balance' account = balance account + amount.
"
`;

exports[`guards-assert.ts > mixedGuard 1`] = `
"module MixedGuard.

Account.
balance a: Account => Int.
~> MixedGuard @ account: Account, amount: Int, ~(amount <= 0) and (balance account >= 0).

---

balance' account = balance account + amount.
"
`;

exports[`guards-assert.ts > multiAssert 1`] = `
"module MultiAssert.

Account.
balance a: Account => Int.
~> MultiAssert @ account: Account, amount: Int, (amount > 0) and (balance account >= 0).

---

balance' account = balance account + amount.
"
`;

exports[`guards-helper.ts > depositConst 1`] = `
"module DepositConst.

Account.
balance a: Account => Int.
~> DepositConst @ account: Account, amount: Int, ~(amount <= 0).

---

balance' account = balance account + amount.
"
`;

exports[`guards-helper.ts > depositDeep 1`] = `
"module DepositDeep.

Account.
balance a: Account => Int.
~> DepositDeep @ account: Account, amount: Int, ~(amount <= 0) and ~((balance account) <= 0).

---

balance' account = balance account + amount.
"
`;

exports[`guards-helper.ts > depositDirect 1`] = `
"module DepositDirect.

Account.
balance a: Account => Int.
~> DepositDirect @ account: Account, amount: Int, ~(amount <= 0).

---

balance' account = balance account + amount.
"
`;

exports[`guards-helper.ts > depositMulti 1`] = `
"module DepositMulti.

Account.
balance a: Account => Int.
~> DepositMulti @ account: Account, amount: Int, ~(amount <= 0) and ~((balance account) <= 0).

---

balance' account = balance account + amount.
"
`;

exports[`guards-helper.ts > depositSubst 1`] = `
"module DepositSubst.

Account.
balance a: Account => Int.
~> DepositSubst @ account: Account, amount: Int, ~((balance account) <= 0).

---

balance' account = balance account + amount.
"
`;

exports[`guards-if-throw.ts > earlyThrow 1`] = `
"module EarlyThrow.

Account.
balance a: Account => Int.
~> EarlyThrow @ a: Account, amount: Int, balance a >= amount.

---

balance' a = balance a - amount.
"
`;

exports[`guards-if-throw.ts > guardWithLocals 1`] = `
"module GuardWithLocals.

Account.
balance a: Account => Int.
~> GuardWithLocals @ a: Account, amount: Int, balance a >= amount.

---

balance' a = balance a - amount.
"
`;

exports[`guards-if-throw.ts > notGuardSideEffects 1`] = `
"module NotGuardSideEffects.

Account.
balance a: Account => Int.
~> NotGuardSideEffects @ a: Account, amount: Int.

---

> UNSUPPORTED: conditional assignment (if/else).
balance' a = balance a - amount.
"
`;

exports[`guards-if-throw.ts > withdraw 1`] = `
"module Withdraw.

Account.
balance a: Account => Int.
~> Withdraw @ a: Account, amount: Int, balance a >= amount.

---

balance' a = balance a - amount.
"
`;

exports[`types-composite.ts > getBooks 1`] = `
"module GetBooks.

Library.
books l: Library => [String].
getBooks lib: Library => [String].

---

getBooks lib = books lib.
"
`;

exports[`types-composite.ts > getCity 1`] = `
"module GetCity.

Address.
city a: Address => String.
Customer.
address c: Customer => Address.
Order.
customer o: Order => Customer.
total o: Order => Int.
getCity o: Order => String.

---

getCity o = city address customer o.
"
`;

exports[`types-composite.ts > getOwnerName 1`] = `
"module GetOwnerName.

User.
name u: User => String.
Account.
owner a: Account => User.
balance a: Account => Int.
getOwnerName a: Account => String.

---

getOwnerName a = name owner a.
"
`;

exports[`types-composite.ts > getPoint 1`] = `
"module GetPoint.

getPoint  => Int * Int.

---

getPoint = [0, 0].
"
`;

exports[`types-composite.ts > getResult 1`] = `
"module GetResult.

Value.
data v: Value => String.
getResult v: Value + Nothing => Value + Nothing.

---

getResult v = v.
"
`;

exports[`types-composite.ts > getStatus 1`] = `
"module GetStatus.

UserWithStatus.
name u: UserWithStatus => String.
status u: UserWithStatus => Int.
getStatus u: UserWithStatus => Int.

---

getStatus u = status u.
"
`;

exports[`types-primitives.ts > getAssignee 1`] = `
"module GetAssignee.

Task.
assignee t: Task => String + Nothing.
getAssignee t: Task => String + Nothing.

---

getAssignee t = assignee t.
"
`;

exports[`types-primitives.ts > getBalance 1`] = `
"module GetBalance.

Account.
balance a: Account => Int.
getBalance a: Account => Int.

---

getBalance a = balance a.
"
`;

exports[`types-primitives.ts > getName 1`] = `
"module GetName.

User.
name u: User => String.
active u: User => Bool.
getName u: User => String.

---

getName u = name u.
"
`;

exports[`types-primitives.ts > isActive 1`] = `
"module IsActive.

User.
name u: User => String.
active u: User => Bool.
isActive u: User => Bool.

---

isActive u = active u.
"
`;

exports[`unsupported.ts > arrowWithLocals 1`] = `
"module ArrowWithLocals.

User.
name u: User => String.
active u: User => Bool.
score u: User => Int.
arrowWithLocals users: [User] => [String].

---

> UNSUPPORTED: users.filter((u) => u.active).map((u) => { const s = u.score; return u.name; }).
"
`;

exports[`unsupported.ts > bubbleCondition 1`] = `
"module BubbleCondition.

bubbleCondition  => Int.

---

> UNSUPPORTED: bar().
"
`;

exports[`unsupported.ts > bubbleNegation 1`] = `
"module BubbleNegation.

bubbleNegation  => Bool.

---

> UNSUPPORTED: bar().
"
`;

exports[`unsupported.ts > callInReturn 1`] = `
"module CallInReturn.

callInReturn  => Int.

---

> UNSUPPORTED: foo().
"
`;

exports[`unsupported.ts > conditionalAssign 1`] = `
"module ConditionalAssign.

Account.
balance a: Account => Int.
owner a: Account => String.
~> ConditionalAssign @ a: Account.

---

> UNSUPPORTED: conditional assignment (if/else).
"
`;

exports[`unsupported.ts > destructuredParam 1`] = `
"module DestructuredParam.

User.
name u: User => String.
active u: User => Bool.
score u: User => Int.
destructuredParam users: [User] => [String].

---

> UNSUPPORTED: filter/map callback must have exactly one identifier parameter.
"
`;

exports[`unsupported.ts > loopAssign 1`] = `
"module LoopAssign.

Account.
balance a: Account => Int.
owner a: Account => String.
~> LoopAssign @ a: Account.

---

> UNSUPPORTED: loop assignment.
"
`;

exports[`unsupported.ts > multiParamCallback 1`] = `
"module MultiParamCallback.

Item.
value i: Item => Int.
multiParamCallback items: [Item] => [Int].

---

> UNSUPPORTED: filter/map callback must have exactly one identifier parameter.
"
`;
